--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
                   <li><a href="#">FAQ</a></li>
                   <li><a href="#">Privacy</a></li>
                   <li><a href="#">Policy</a></li>
-                  <li><a href="#">Warrantry</a></li>
+                  <li><a href="#">Warranty</a></li>
                   <li><a href="#">Shipment</a></li>
                 </ul>
             </div>
